// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Export all notes and attached files > Files list 1`] = `
[
  "/[REDACTED-UUID].md",
  "/[REDACTED-UUID].md",
  "/[REDACTED-UUID].md",
  "/_resources/[REDACTED-UUID]-test.txt",
  "/[REDACTED-UUID].md",
  "/[REDACTED-UUID].md",
]
`;

exports[`Export all notes and attached files > Notes texts 1`] = `
[
  "---
title: Note 1
created: 100000
updated: 200000
tags:
  - bar
  - baz
  - foo

---

Hello world!
",
  "---
title: Note 2
created: 100001
updated: 200001
tags: []

---

Mention for [Note 1](./[REDACTED-UUID].md)
",
  "---
title: Note 5
created: 100002
updated: 200002
tags: []

---

Note with [invalid attachment](res://[REDACTED-UUID]) and mention for [invalid note](note://[REDACTED-UUID])
",
  "---
title: Note 3
created: 100003
updated: 200003
tags: []

---

Note with [attachment](./_resources/[REDACTED-UUID]-test.txt)
",
  "---
title: Note 4
created: 100004
updated: 200004
tags: []

---

Note with [attachment](./_resources/[REDACTED-UUID]-test.txt) and mention for [Note 1](./[REDACTED-UUID].md)
",
]
`;

exports[`Export all notes and attached files with custom file names > Files list 1`] = `
[
  "/notes/bar/[REDACTED-UUID]-Note 1.md",
  "/notes/[REDACTED-UUID]-Note 2.md",
  "/notes/[REDACTED-UUID]-Note 5.md",
  "/files/[REDACTED-UUID]-test.txt",
  "/notes/[REDACTED-UUID]-Note 3.md",
  "/notes/[REDACTED-UUID]-Note 4.md",
]
`;

exports[`Export all notes and attached files with custom file names > Notes texts 1`] = `
[
  "---
title: Note 1
created: 100000
updated: 200000
tags:
  - bar
  - baz
  - foo

---

Hello world!
",
  "---
title: Note 2
created: 100001
updated: 200001
tags: []

---

Mention for [Note 1](<./bar/[REDACTED-UUID]-Note 1.md>)
",
  "---
title: Note 5
created: 100002
updated: 200002
tags: []

---

Note with [invalid attachment](res://[REDACTED-UUID]) and mention for [invalid note](note://[REDACTED-UUID])
",
  "---
title: Note 3
created: 100003
updated: 200003
tags: []

---

Note with [attachment](../files/[REDACTED-UUID]-test.txt)
",
  "---
title: Note 4
created: 100004
updated: 200004
tags: []

---

Note with [attachment](../files/[REDACTED-UUID]-test.txt) and mention for [Note 1](<./bar/[REDACTED-UUID]-Note 1.md>)
",
]
`;

exports[`Export single note and it attachments > Files list 1`] = `
[
  "/_resources/[REDACTED-UUID]-test.txt",
  "/[REDACTED-UUID].md",
]
`;

exports[`Export single note and it attachments > Notes texts 1`] = `
[
  "---
title: Note 4
created: 100000
updated: 200000
tags: []

---

Note with [attachment](./_resources/[REDACTED-UUID]-test.txt) and mention for [Note 1](./[REDACTED-UUID].md)
",
]
`;
